--- a/src/component/card.css
+++ b/src/component/card.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   margin: 20px;
   transition: 200ms;
-  background-color: #2f3136;
 }
 .card-container:hover {
   transition: 200ms;
@@ -17,13 +16,13 @@
   height: 150px;
   width: 350px;
   display: flex;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-bottom: none;
   justify-content: center;
   align-items: center;
 
-  background-color: #2f3136;
-  color: aliceblue;
+  background-color: var(--first-color);
+  color: var(--secondry-color);
 }
 
 .card-text-container {
@@ -35,7 +34,7 @@
   flex-direction: column;
   justify-content: space-around;
 
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-top: none;
   background-color: #27292d;
 }
