--- a/src/component/button.css
+++ b/src/component/button.css
@@ -11,17 +11,11 @@
   white-space: nowrap;
 }
 
-.btn--primary {
-  background-color: var(--primary);
-  color: #242424;
-  border: 1px solid var(--primary);
-}
-
 .btn--outline {
   background-color: transparent;
   color: #fff;
   padding: 8px 20px;
-  border: 1px solid var(--primary);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   transition: all 0.3s ease-out;
 }
 
@@ -35,36 +29,12 @@
   font-size: 20px;
 }
 
-.btn--mobile {
-  text-align: center;
-  border-radius: 4px;
-  width: 80%;
-  text-decoration: none;
-  font-size: 1.5rem;
-  background-color: transparent;
-  color: #fff;
-  padding: 14px 20px;
-  border: 1px solid #fff;
-  transition: all 0.3s ease-out;
-}
-
-.btn--wide {
-  padding: 12px 64px;
-  font-size: 20px;
-}
-
 .btn--large:hover,
 .btn--medium:hover,
 .btn--mobile:hover {
   transition: all 0.3s ease-out;
   background: var(--third-color);
   color: #242424;
-}
-
-.btn--wide:hover {
-  color: #fff;
-  background-color: #f00946;
-  transition: all 0.2s ease-out;
 }
 
 .btn-link {
@@ -75,30 +45,6 @@
   padding: 8px 16px;
   height: 100%;
   width: 100%;
-}
-
-.blue {
-  background-color: #276afb;
-  color: #fff;
-  border: none;
-}
-
-.red {
-  background-color: #f00946;
-  color: #fff;
-  border: none;
-}
-
-.primary {
-  background-color: #242424;
-  color: #fff;
-  border: none;
-}
-
-.primary:hover {
-  background-color: #fff;
-  color: #242424;
-  border: none;
 }
 
 .green {
