--- a/src/component/button.css
+++ b/src/component/button.css
@@ -3,7 +3,6 @@
 }
 
 .btn {
-  padding: 8px 20px;
   border-radius: 4px;
   outline: none;
   border: none;
@@ -12,20 +11,19 @@
 }
 
 .btn--outline {
-  background-color: transparent;
+  background-color: var(--second-color);
   color: #fff;
-  padding: 8px 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   transition: all 0.3s ease-out;
 }
 
 .btn--medium {
-  padding: 8px 20px;
+  padding: 5px 10px;
   font-size: 18px;
 }
 
 .btn--large {
-  padding: 12px 26px;
+  padding: 5px 10px;
   font-size: 20px;
 }
 
