--- a/src/component/card.css
+++ b/src/component/card.css
@@ -1,4 +1,4 @@
-.card-container {
+/* .card-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,4 +53,4 @@
   font-size: large;
   font-weight: bolder;
   color: var(--third-color);
-}
+} */
