--- a/src/component/card2.css
+++ b/src/component/card2.css
@@ -4,12 +4,13 @@
   transition: all 1s ease;
   position: relative;
   transform-style: preserve-3d;
+  border-radius: 10px;
 }
 
 .front {
   height: 100%;
   width: 100%;
-  background-color: #e0bbe4;
+  color: black;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -31,19 +32,22 @@
 .back {
   height: 100%;
   width: 100%;
-  background-color: #e0bbe4;
+  padding: 15px;
   position: absolute;
   font-size: 1.2rem;
   z-index: 1;
   transform: rotateY(180deg);
   border-radius: 10px;
-  padding: 0.5rem;
-  text-align: center;
+  color: black;
 }
 
 .back p {
   font-weight: 500;
   margin-top: 40px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .card2-container:hover .card2 {
@@ -57,10 +61,20 @@
 
 .back span {
   font-weight: bolder;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 .back button {
   position: absolute;
   bottom: 30px;
   left: 35%;
+}
+.yellow {
+  background-color: #ffee93;
+}
+
+.purple {
+  background-color: #e0bbe4;
+}
+.light-green {
+  background-color: #adf7b6;
 }
