--- a/src/component/button.css
+++ b/src/component/button.css
@@ -1,7 +1,3 @@
-:root {
-  --primary: #fff;
-}
-
 .btn {
   border-radius: 4px;
   outline: none;
@@ -25,9 +21,20 @@
 .btn--large {
   padding: 5px 10px;
   font-size: 20px;
+  border: 2px solid black;
+  transition: all 0.3s ease-out;
+  background-color: var(--third-color);
+  color: black;
 }
 
-.btn--large:hover,
+.btn--large:hover {
+  transition: all 0.3s ease-out;
+  background-color: var(--second-color);
+  border: 2px solid white;
+
+  color: white;
+}
+
 .btn--medium:hover,
 .btn--mobile:hover {
   transition: all 0.3s ease-out;
@@ -43,14 +50,4 @@
   padding: 8px 16px;
   height: 100%;
   width: 100%;
-}
-
-.green {
-  background: #25ce4a;
-  color: #fff;
-  border: none;
-}
-
-.green:hover {
-  background-color: #242424;
 }
